Fix the background colour, wrap list items in card views

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -121,7 +121,7 @@ textarea:not([rows]) {
 
 body {
     font-family: var(--font-family);
-    background-color: var(--color-gray-100);
+    background-color: var(--color-gray-200);
     padding: var(--space-size-lg) 0;
 }
 main {
@@ -211,6 +211,10 @@ li {
     flex-direction: row;
     gap: var(--space-size-xs);
     margin: var(--space-size-sm) 0;
+    background-color: var(--color-gray-100);
+    border: 1px solid var(--color-gray-300);
+    padding: var(--space-size-md);
+    border-radius: var(--border-radius);
 }
 
 select {
